--- a/css/app.css
+++ b/css/app.css
@@ -1,6 +1,10 @@
 .container {
   display: flex;
-  align-items: center;
   justify-content: center;
   flex-direction: column;
+  align-items: center;
+  width: 100vw;
+  height: 100vh;
+  margin: 0;
+  padding: 0;
 }
